Fix label spacing

--- a/label.scss
+++ b/label.scss
@@ -5,15 +5,21 @@
 @use "node_modules/@mapsindoors/midt/build/scss/variables" as variables;
 
 .mi-label {
-    display: block;
+    display: flow-root;
     font-style: normal;
     @include font.size(medium);
     @include font.weight(large);
     @include color.black(base);
+    @include margin.bottom(medium);
 
-    &--right {
-        display: flex;
-        align-items: center;
-        gap: 8px;
+    &>* {
+        @include margin.top(xx-small);
+    }
+
+    &>input[type="radio"],
+    &>input[type="checkbox"],
+    &>label.mi-toggle-btn {
+        margin-right: 8px;
+        float: left;
     }
 }
